--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "has-deps",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "A simple utility to check if your installed dependencies are up to date with what is listed in your package.json'",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
     "dependencies",
     "packages"
   ],
+  "homepage": "https://github.com/91bananas/has-deps",
   "author": "David Cushman",
   "license": "MIT"
 }
